añadido texto sin forma

--- a/index.html
+++ b/index.html
@@ -11,6 +11,61 @@
 </head>
 
 <body>
+    Nombre del equipo
+    Equipo Quienes somos Contacto
+    IMAGEN
+    <!-- (lema del grupo)  -->Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Equipo
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam aliquam, laboriosam
+    quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione nemo!
+    Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis nemo, temporibus
+    possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores dicta, maxime asperiores
+    praesentium sed consectetur!
+
+    Fortalezas
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus a, omnis
+    exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse quo? Nesciunt architecto
+    nulla recusandae?
+
+    Debilidades
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam placeat quo eligendi dolorum non quas
+    praesentium est, odio facilis error laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?
+
+    Quiénes somos
+    IMAGEN
+    Nombre y apellido
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
+    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+    RRSS IMAGÉNES
+
+    IMAGEN
+    Nombre y apellido
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
+    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+    RRSS IMAGÉNES
+
+    IMAGEN
+    Nombre y apellido
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
+    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+    RRSS IMAGÉNES
+
+    IMAGEN
+    Nombre y apellido
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
+    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+    RRSS IMAGÉNES
+
+    Nombre del grupo ©
+    Equipo
+    Quienes somos
+    Contacto
+
+    IMAGEN LOGO
+
+
+
+
 
 </body>
 
