--- a/index.html
+++ b/index.html
@@ -11,58 +11,159 @@
 </head>
 
 <body>
-    Nombre del equipo
-    Equipo Quienes somos Contacto
-    IMAGEN
-    <!-- (lema del grupo)  -->Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Equipo
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam aliquam, laboriosam
-    quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione nemo!
-    Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis nemo, temporibus
-    possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores dicta, maxime asperiores
-    praesentium sed consectetur!
+    <header>
+        <div>
+            <h1 class="nombreEquipo">Nombre del equipo</h1>
+        </div>
+        <nav class="nav">
+            <ul class="menu">
+                <li class="item"><a href="team" alt="equipo" title="equipo1">Equipo</a></li>
+                <li class="item"><a href="quienesSomos" alt="quienes" title="quienes"> Quienes somos</a>
+                </li>
+                <li class="item"><a href="contacto" alt="contacto" title="contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        </div>
+        <div class="imagen1">
+            <img src="./images/fotos.jpg" alt="imagen1" title="imagen1">
+        </div>
+        <!-- (lema del grupo) Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+    </header>
+    <main>
+        <article>
+            <div>
+                <div>
+                    <h2>Equipo</h2>
+                </div>
+                <div>
+                    </p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam
+                    aliquam,
+                    laboriosam
+                    quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione
+                    nemo!
+                    </p>
 
-    Fortalezas
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus a, omnis
-    exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse quo? Nesciunt architecto
-    nulla recusandae?
+                    <p>Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis
+                        nemo,
+                        temporibus
+                        possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores
+                        dicta,
+                        maxime
+                        asperiores
+                        praesentium sed consectetur!</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div>
+                <div>
+                    <h2>Fortalezas</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus
+                        a,
+                        omnis exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse
+                        quo?
+                        Nesciunt architecto nulla recusandae?
+                </div>
+                <div>
+                    <h2>Debilidades</h2>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Excepturi laboriosam placeat quo eligendi dolorum non quas praesentium est, odio facilis
+                        error
+                        laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?</p>
+                </div>
+            </div>
+        </article>
 
-    Debilidades
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam placeat quo eligendi dolorum non quas
-    praesentium est, odio facilis error laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?
+        <article>
+            <div>
+                <h2>Quiénes somos</h2>
+            </div>
 
-    Quiénes somos
-    IMAGEN
-    Nombre y apellido
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
-    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
-    RRSS IMAGÉNES
+            <div>
+                <div>
+                    <img src="./images/fotos.jpg" alt="imagen">
+                </div>
+                <div>
+                    <div>
+                        <h3>Nombre y apellido </h3>
+                    </div>
+                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
+                        ab
+                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                    </p>
+                </div>
+                imagen redes
+            </div>
 
-    IMAGEN
-    Nombre y apellido
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
-    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
-    RRSS IMAGÉNES
 
-    IMAGEN
-    Nombre y apellido
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
-    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
-    RRSS IMAGÉNES
+            <div>
+                <div>
+                    <img src="./images/fotos.jpg" alt="imagen">
+                </div>
 
-    IMAGEN
-    Nombre y apellido
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio
-    excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
-    RRSS IMAGÉNES
+                <div>
+                    <h3>Nombre y apellido </h3>
+                </div>
 
-    Nombre del grupo ©
-    Equipo
-    Quienes somos
-    Contacto
 
-    IMAGEN LOGO
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                    consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                </p>
+                imagen redes
+            </div>
+            <div>
+                <div>
+                    <img src="./images/fotos.jpg" alt="imagen">
+                </div>
 
+                <div>
+                    <h3>Nombre y apellido </h3>
+                </div>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                    consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                </p>
+                imagen redes
+            </div>
+            <div>
+                <div>
+                    <img src="./images/fotos.jpg" alt="imagen">
+                </div>
+
+                <div>
+                    <h3>Nombre y apellido </h3>
+                </div>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
+                    aliquam consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                </p>
+                imagen redes
+            </div>
+
+        </article>
+    </main>
+    <footer>
+
+        <p>Nombre del grupo &copy;2021</p>
+        <nav>
+            <ul>
+                <li><a href="#team">Equipo</a> </li>
+                <li><a href="#who-we-are">Quienes somos</a></li>
+                <li><a href=" ./contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+        <div><img src="./images/logo-adalab.png" alt="logo"></div>
+
+    </footer>
 
 
 
