solucionado contenido html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <div>
-            <h1 class="nombreEquipo">Nombre del equipo</h1>
-        </div>
+
+        <h1 class="nombreEquipo">Nombre del equipo</h1>
+
         <nav class="nav">
             <ul class="menu">
                 <li class="item"><a href="team" alt="equipo" title="equipo1">Equipo</a></li>
@@ -23,92 +23,81 @@
                 <li class="item"><a href="contacto" alt="contacto" title="contacto">Contacto</a></li>
             </ul>
         </nav>
-        </div>
+
         <div class="imagen1">
-            <img src="./images/fotos.jpg" alt="imagen1" title="imagen1">
+            <img src="./images/fotos.jpg" alt="imagen1" title="imagen1" class="">
         </div>
-        <!-- (lema del grupo) Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+        <div>
+            <!-- (lema del grupo) Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+        </div>
     </header>
     <main>
-        <article>
-            <div>
-                <div>
-                    <h2>Equipo</h2>
-                </div>
-                <div>
-                    </p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam
-                    aliquam,
-                    laboriosam
-                    quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione
-                    nemo!
-                    </p>
+        <section>
 
-                    <p>Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis
-                        nemo,
-                        temporibus
-                        possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores
-                        dicta,
-                        maxime
-                        asperiores
-                        praesentium sed consectetur!</p>
-                </div>
-            </div>
-        </article>
-        <article>
-            <div>
-                <div>
-                    <h2>Fortalezas</h2>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus
-                        a,
-                        omnis exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse
-                        quo?
-                        Nesciunt architecto nulla recusandae?
-                </div>
-                <div>
-                    <h2>Debilidades</h2>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Excepturi laboriosam placeat quo eligendi dolorum non quas praesentium est, odio facilis
-                        error
-                        laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?</p>
-                </div>
-            </div>
-        </article>
+            <h2>Equipo</h2>
 
-        <article>
-            <div>
-                <h2>Quiénes somos</h2>
-            </div>
+            </p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam
+            aliquam,
+            laboriosam
+            quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione
+            nemo!
+            </p>
 
-            <div>
-                <div>
-                    <img src="./images/fotos.jpg" alt="imagen">
-                </div>
-                <div>
-                    <div>
-                        <h3>Nombre y apellido </h3>
-                    </div>
-                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
-                        ab
-                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                    </p>
-                </div>
+            <p>Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis
+                nemo,
+                temporibus
+                possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores
+                dicta,
+                maxime
+                asperiores
+                praesentium sed consectetur!</p>
+
+        </section>
+        <section>
+
+
+            <h2>Fortalezas</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus
+                a,
+                omnis exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse
+                quo?
+                Nesciunt architecto nulla recusandae?
+
+            <h2>Debilidades</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Excepturi laboriosam placeat quo eligendi dolorum non quas praesentium est, odio facilis
+                error
+                laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?</p>
+
+        </section>
+
+        <section>
+
+            <h2>Quiénes somos</h2>
+
+
+            <article>
+                <img src="./images/fotos.jpg" alt="imagen">
+
+                <h3>Nombre y apellido </h3>
+
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
+                    ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                </p>
+
                 imagen redes
-            </div>
 
 
-            <div>
-                <div>
-                    <img src="./images/fotos.jpg" alt="imagen">
-                </div>
+            </article>
+            <article>
+                <img src="./images/fotos.jpg" alt="imagen">
 
-                <div>
-                    <h3>Nombre y apellido </h3>
-                </div>
+                <h3>Nombre y apellido </h3>
+
 
 
                 <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
@@ -117,39 +106,35 @@
                     eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
                 </p>
                 imagen redes
-            </div>
-            <div>
-                <div>
-                    <img src="./images/fotos.jpg" alt="imagen">
-                </div>
+            </article>
 
-                <div>
-                    <h3>Nombre y apellido </h3>
-                </div>
+            <article>
+                <img src="./images/fotos.jpg" alt="imagen">
+
+                <h3>Nombre y apellido </h3>
+
                 <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
                     impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
                     consequatur ab
                     eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
                 </p>
                 imagen redes
-            </div>
-            <div>
-                <div>
-                    <img src="./images/fotos.jpg" alt="imagen">
-                </div>
 
-                <div>
-                    <h3>Nombre y apellido </h3>
-                </div>
+            </article>
+            <article>
+                <img src="./images/fotos.jpg" alt="imagen">
+
+                <h3>Nombre y apellido </h3>
+
                 <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
                     impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
                     aliquam consequatur ab
                     eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
                 </p>
                 imagen redes
-            </div>
 
-        </article>
+            </article>
+        </section>
     </main>
     <footer>
 
