--- a/index.html
+++ b/index.html
@@ -73,64 +73,71 @@
 
         </section>
 
-        <section>
+        <section class="whoweare">
 
-            <h2>Quiénes somos</h2>
+            <h2 class="we-are">Quiénes somos</h2>
 
 
-            <article>
-                <img src="./images/fotos.jpg" alt="imagen">
+            <article class="container-adablaber">
+                <div class="container-image"><img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+                </div>
 
-                <h3>Nombre y apellido </h3>
-
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
-                    ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                </p>
+                <h3 class="name">Paloma Arévalo </h3>
+                <div class="container-text">
+                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
+                        ab
+                        eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                    </p>
+                </div>
 
                 imagen redes
 
 
             </article>
             <article>
-                <img src="./images/fotos.jpg" alt="imagen">
+                <img src="./images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
 
-                <h3>Nombre y apellido </h3>
+                <h3 class="name">Claudia Santana </h3>
 
+                <div class="container-text">
 
-
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
-                    consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                </p>
-                imagen redes
-            </article>
-
-            <article>
-                <img src="./images/fotos.jpg" alt="imagen">
-
-                <h3>Nombre y apellido </h3>
-
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
-                    consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                </p>
+                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                        consequatur ab
+                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                    </p>
+                </div>
                 imagen redes
 
             </article>
+
             <article>
-                <img src="./images/fotos.jpg" alt="imagen">
+                <img src="./images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
 
-                <h3>Nombre y apellido </h3>
+                <h3 class="name">Gabriela Gil</h3>
+                <div class="container-text">
+                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                        consequatur ab
+                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                    </p>
+                </div>
+                imagen redes
 
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                    impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
-                    aliquam consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                </p>
+
+            </article>
+            <article>
+                <img src="./images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+
+                <h3 class="name">María Molina </h3>
+                <div class="container-text">
+                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
+                        aliquam consequatur ab
+                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                    </p>
+                </div>
                 imagen redes
 
             </article>
