ajustes rrss en who we are

--- a/whoweare-version-1/index.html
+++ b/whoweare-version-1/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/reset.css" class="css">
     <link rel="stylesheet" href="./styles/main.css" class="css">
 </head>
@@ -91,9 +93,21 @@
                             ab
                             eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
+
+                    </div>
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
                     </div>
 
-                    imagen redes
+
 
 
                 </article>
@@ -109,10 +123,20 @@
                         <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
                             impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
                             consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                     </div>
-                    imagen redes
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
 
                 </article>
 
@@ -124,10 +148,20 @@
                         <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
                             impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
                             consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                     </div>
-                    imagen redes
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
 
 
                 </article>
@@ -139,10 +173,20 @@
                         <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
                             impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
                             aliquam consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                     </div>
-                    imagen redes
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
             </div>
             </article>
         </section>
