--- a/header-version-1.html/header.html
+++ b/header-version-1.html/header.html
@@ -23,8 +23,15 @@
                 <li class="itemMenu"><a href="contacto" alt="contact" title="contact">Contacto</a></li>
             </ul>
         </nav>
-        <!-- (lema del grupo) Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+        <div class="hero">
+            <img class="imagen1" src="../images/imagen-temporal.jpg" alt="imagen temporal">
+        </div>
+        <div class="rectangle">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est nisi impedit necessitatibus ut. Reiciendis sequi aut laboriosam mollitia quam placeat, vel, exercitationem veniam amet, itaque commodi earum dolorum iure ab?
+        </div>
     </header>
+    <div class="divisor">
+    </div>
     <main>
         <article>
             <div>
