--- a/header-version-1.html/header.html
+++ b/header-version-1.html/header.html
@@ -30,7 +30,7 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est nisi impedit necessitatibus ut. Reiciendis sequi aut laboriosam mollitia quam placeat, vel, exercitationem veniam amet, itaque commodi earum dolorum iure ab?
         </div>
     </header>
-    <div class="divisor">
+    <div>
     </div>
     <main>
         <article>
