--- a/whoweare-version-1/index.html
+++ b/whoweare-version-1/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <header>
-
-        <h1 class="nombreEquipo">Nombre del equipo</h1>
+        <div class="team-name">
+            <h1 class="nombreEquipo">Nombre del equipo</h1>
+        </div>
 
         <nav class="nav">
             <ul class="menu">
@@ -81,9 +82,8 @@
 
             <div class="container-adalabers">
                 <article>
-                    <div class="container-image"><img src="./images/foto-paloma.jpg" alt="imagen"
-                            class="image-adalaber">
-                    </div>
+                    <img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+
 
                     <h3 class="name">Paloma Arévalo </h3>
                     <div class="container-text">
