--- a/index.html
+++ b/index.html
@@ -6,155 +6,194 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/reset.css" class="css">
     <link rel="stylesheet" href="./styles/main.css" class="css">
 </head>
 
 <body>
     <header>
-
-        <h1 class="nombreEquipo">Nombre del equipo</h1>
-
-        <nav class="nav">
+        <h1 class="title">Divitis</h1>
+        <nav class="nav1">
             <ul class="menu">
-                <li class="item"><a href="team" alt="equipo" title="equipo1">Equipo</a></li>
-                <li class="item"><a href="quienesSomos" alt="quienes" title="quienes"> Quienes somos</a>
+                <li class="itemMenu"><a href="team" alt="team" title="equipo1">Equipo</a></li>
+                <li class="itemMenu"><a href="quienesSomos" alt="quienes" title="who"> Quienes somos</a>
                 </li>
-                <li class="item"><a href="contacto" alt="contacto" title="contacto">Contacto</a></li>
+                <li class="itemMenu"><a href="contacto" alt="contact" title="contact">Contacto</a></li>
             </ul>
         </nav>
+        <div class="hero">
+            <img class="imagen1" src="../images/imagen-temporal.jpg" alt="imagen temporal">
+        </div>
 
-        <div class="imagen1">
-            <img src="./images/fotos.jpg" alt="imagen1" title="imagen1" class="">
-        </div>
-        <div>
-            <!-- (lema del grupo) Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
-        </div>
     </header>
     <main>
-        <section>
+        <!-------------------------------------- equipo fortaleza y debilidades------------------------->
 
-            <h2>Equipo</h2>
 
-            </p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam distinctio mollitia ullam
-            aliquam,
-            laboriosam
-            quod eos consequuntur, nesciunt sed hic laudantium, eum numquam totam unde at vero iusto ratione
-            nemo!
+        <section class="equipo">
+            <div class="frase-presentacion">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+
+            <h2 class="equipo-titulo">Equipo</h2>
+            <p class="equipo-parrafo">
+                La necesidad de formación es una constante, mientras que en el mundo en que vivimos es incierto, por lo
+                que hemos decidido dar un paso al frente y ser dueñas de nuestro destino. Por ello estamos deseando
+                conocer este mundo de la programación y hemos decidido apostar por una formación con ADALAB. <br> </br>
+
+                Somos un equipo recién constituido para aprender a desarrollar servicios IT, estamos aprendiendo a crear
+                soluciones integrales de alto componente tecnológico en front-end, social y humano. Sentimos pasión por
+                aprender y mejorar laboralmente.
             </p>
 
-            <p>Corporis, illum. Facilis maxime minima necessitatibus, vitae cumque laborum quaerat corporis
-                nemo,
-                temporibus
-                possimus nihil asperiores cupiditate facere reiciendis dolores distinctio! Quos qui maiores
-                dicta,
-                maxime
-                asperiores
-                praesentium sed consectetur!</p>
+            <div class="cuadrado"></div>
 
         </section>
-        <section>
 
+        <section class="fortalezas-debilidades">
+            <h3 class="fortalezas-titulo">Fortalezas</h3>
+            <p class="fortalezas-debilidades-parrafo">
+                A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las
+                principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos
+                hasta lograr nuestros objetivos. Tenemos recursos necesarios para recuperarnos de las caídas y seguir
+                adelante.
+            </p>
 
-            <h2>Fortalezas</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati, quam necessitatibus
-                a,
-                omnis exercitationem repellendus, alias aut recusandae unde doloremque quidem ex eligendi esse
-                quo?
-                Nesciunt architecto nulla recusandae?
-
-            <h2>Debilidades</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Excepturi laboriosam placeat quo eligendi dolorum non quas praesentium est, odio facilis
-                error
-                laudantium soluta, magni facere pariatur eos! Dolor, officiis maiores?</p>
-
+            <h3 class="debilidades-titulo">Debilidades</h3>
+            <p class="fortalezas-debilidades-parrafo">
+                La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
+                los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
+                juntas para ayudarnos a mejorar como personas y poder llegar a ser buenas programadoras. Estamso
+                trabajando en corregir este detalle y juntas lograr los objetivos en comun.
+            </p>
         </section>
+        <!-------------------------------------- fin equipo fortaleza y debilidades------------------------->
 
         <section class="whoweare">
 
             <h2 class="we-are">Quiénes somos</h2>
 
-
-            <article class="container-adablaber">
-                <div class="container-image"><img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
-                </div>
-
-                <h3 class="name">Paloma Arévalo </h3>
-                <div class="container-text">
-                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur
-                        ab
-                        eaque nesciunt illum! Dicta cumque animi illo enim totam?
-                    </p>
-                </div>
-
-                imagen redes
+            <div class="container-adalabers">
+                <article>
+                    <img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
 
 
-            </article>
-            <article>
-                <img src="./images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
+                    <h3 class="name">Paloma Arévalo </h3>
+                    <div class="container-text">
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                            impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                            consequatur
+                            ab
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        </p>
 
-                <h3 class="name">Claudia Santana </h3>
+                    </div>
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
 
-                <div class="container-text">
-
-                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
-                        consequatur ab
-                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                    </p>
-                </div>
-                imagen redes
-
-            </article>
-
-            <article>
-                <img src="./images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
-
-                <h3 class="name">Gabriela Gil</h3>
-                <div class="container-text">
-                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
-                        consequatur ab
-                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                    </p>
-                </div>
-                imagen redes
+                    </div>
 
 
-            </article>
-            <article>
-                <img src="./images/foto-maria.jpg" alt="imagen" class="image-adalaber">
 
-                <h3 class="name">María Molina </h3>
-                <div class="container-text">
-                    <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
-                        impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
-                        aliquam consequatur ab
-                        eaque nesciunt illum! Dicta cumque animi illo enim totam? RRSS
-                    </p>
-                </div>
-                imagen redes
 
+                </article>
+                <article>
+
+
+                    <img src="./images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
+
+                    <h3 class="name">Claudia Santana </h3>
+
+                    <div class="container-text">
+
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                            impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                            consequatur ab
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        </p>
+                    </div>
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
+
+                </article>
+
+                <article>
+                    <img src="./images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+
+                    <h3 class="name">Gabriela Gil</h3>
+                    <div class="container-text">
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                            impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam
+                            consequatur ab
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        </p>
+                    </div>
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
+
+
+                </article>
+                <article>
+                    <img src="./images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+
+                    <h3 class="name">María Molina </h3>
+                    <div class="container-text">
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero,
+                            impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati,
+                            aliquam consequatur ab
+                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        </p>
+                    </div>
+                    <div class="rrss-icons">
+                        <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·<div class="icon"><a
+                                href="">
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </a></div>·<div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                        <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                        </div>
+
+                    </div>
+            </div>
             </article>
         </section>
     </main>
-    <footer>
-
-        <p>Nombre del grupo &copy;2021</p>
+    <footer class="footer">
+        <p class="nombredelgrupofooter">Nombre del grupo &copy;2021</p>
         <nav>
-            <ul>
-                <li><a href="#team">Equipo</a> </li>
-                <li><a href="#who-we-are">Quienes somos</a></li>
-                <li><a href=" ./contacto.html">Contacto</a></li>
+            <ul class="equipofooter">
+                <li>Equipo</li>
+                <li>Quiénes somos</li>
+                <li>Contacto</li>
             </ul>
         </nav>
-        <div><img src="./images/logo-adalab.png" alt="logo"></div>
-
+        <img src="./images/logo-adalab.png" alt="logo" class="logoadalab" />
     </footer>
 
 
