--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
     <header>
-        <h1 class="title">Divitis</h1>
+        <h1 class="title"><strong>Divitis</strong></h1>
         <nav class="nav1">
             <ul class="menu">
-                <li class="itemMenu"><a href="team" alt="team" title="equipo1">Equipo</a></li>
-                <li class="itemMenu"><a href="quienesSomos" alt="quienes" title="who"> Quienes somos</a>
+                <li class="itemMenu"><a href="team" alt="team" title="equipo1"><strong>Equipo</strong></a></li>
+                <li class="itemMenu"><a href="quienesSomos" alt="quienes" title="who"><strong>Quienes somos</strong></strQuienes></a>
                 </li>
-                <li class="itemMenu"><a href="contacto" alt="contact" title="contact">Contacto</a></li>
+                <li class="itemMenu"><a href="contacto" alt="contact" title="contact"><strong>Contacto</strong></a></li>
             </ul>
         </nav>
         <div class="hero">
@@ -33,7 +33,7 @@
 
 
         <section class="equipo">
-            <div class="frase-presentacion">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+            <div class="frase-presentacion"> "Son nuestras decisiones las que muestran quienes somos realmente, más que nuestras habilidades."<br>- J. K. Rowling </div>
 
             <h2 class="equipo-titulo">Equipo</h2>
             <p class="equipo-parrafo">
