error de imagen arreglado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <img class="imagen1" src="../images/imagen-temporal.jpg" alt="imagen temporal">
+            <img class="imagen1" src="./images/imagen-temporal.jpg" alt="imagen temporal">
         </div>
 
     </header>
