--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                     <div class="container-text">
 
-                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        <p class="wwa-parrafo"> Dedicada toda su vida al negocio familiar, encontró su vocación fundando una organización juvenil. Ser programadora es el primer paso en el largo camino a recorrer para cambiar su futuro profesional y dedicarse a lo que realmente le apasiona. 
                         </p>
                     </div>
                     <div class="rrss-icons">
