links footer working

--- a/index.html
+++ b/index.html
@@ -176,13 +176,15 @@
         </section>
     </main>
     <footer class="footer">
-        <p class="nombredelgrupofooter">Nombre del grupo &copy;2021</p>
+        <p class="nombredelgrupofooter">Divitis &copy;2021</p>
         <nav>
             <ul class="equipofooter">
-                <li class="itemfooter">Equipo
+                <li class="itemfooter">
+                    <a href="#team" alt="team" title="equipo1">Equipo</a>
                 </li>
                 <li class="itemfooter">
-                    Quiénes somos</li>
+                    <a href="#quienesSomos" alt="team" title="equipo1">Quiénes somos</a>
+                </li>
                 <li class="itemfooter">
                     Contacto</li>
             </ul>
