cambio texto Gabi

--- a/index.html
+++ b/index.html
@@ -146,12 +146,9 @@
 
                     <h3 class="name">Gabriela Gil</h3>
                     <div class="container-text">
-                        <p class="wwa-parrafo"> Soy paciente pero tenaz, la paciencia es una virtud que tengo que me
-                            permite luchar por el objetivo que tengo y persistir hasta alcanzarlo
-                            Soy bastante observadora y esto me hace ser práctica a la hora de resolver problemas que se
-                            presentan en mi día a día.
-                            Además, y lo mejor, me gusta disfrutar de la vida, gusta viajar, cuando el dinero y el
-                            tiempo me lo permite.
+                        <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se
+                            marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de
+                            resolver problemas que se presentan en su día a día. Es una luchadora.
                         </p>
                         <div class="rrss-icons">
                             <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
