--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,8 +15,10 @@
 <!-- <body>
   <div class="page">
     <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
+    <main>
     <include src="./partials/team.html"></include>
     <include src="./partials/whoweare.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
   </div>
   <script src="./assets/js/main.js"></script>
