--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="./styles/main.css" class="css">
 </head>
 
-<!-- <body>
+<body>
   <div class="page">
     <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
-    <include src="./partials/team.html"></include>
+    <!-- include src="./partials/team.html"></include>
     <include src="./partials/whoweare.html"></include>
     <include src="./partials/footer.html"></include>
   </div>
